--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>soy un chico tranquilo que está muy interesado en temas de sexología</p>
     </div>
 
     <div class="bloque">
